--- a/.github/workflows/mac-mini-test.yml
+++ b/.github/workflows/mac-mini-test.yml
@@ -28,10 +28,10 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Set PYTHONPATH
-        run: echo "PYTHONPATH=src" >> $GITHUB_ENV    
+        run: echo "PYTHONPATH=$(pwd)/src" >> $GITHUB_ENV   
 
       - name: Verify PYTHONPATH
-        run: echo $PYTHONPATH
+        run: echo "PYTHONPATH is: $PYTHONPATH"
 
       - name: Run macOS-only test
         run: python test/test_main.py
